# CUDA-Programs

./: .clangd  .gitignore  CMakeLists.txt
Appendicies/atomicCAS/: atomicCAS.cu
Appendicies/gpusaxpy/: gpusaxpy.cu
Chapter04/batcher9PT/: batcher9PT.cu
Chapter04/filter9PT/: filter9PT.cu
Chapter04/filter9PT_2/: filter9PT_2.cu
Chapter04/filter9PT_3/: filter9PT_3.cu
Chapter04/median9PT/: median9PT.cu
Chapter04/sobel6PT/: sobel6PT.cu
Chapter05/rotate1/: rotate1.cu
Chapter05/rotate1B/: rotate1B.cu
Chapter05/rotate2/: rotate2.cu
Chapter05/rotate3/: rotate3.cu
Chapter05/rotate4/: rotate4.cu
Chapter05/rotate4cv/: rotate4cv.cu
Chapter06/ising/: ising.cu
Chapter08/fullblk/: fullblk.cu
Chapter08/fulldoi/: fulldoi.cu
Chapter08/reco/: reco.cu
Chapter08/recosem/: recosem.cu
Chapter09/p2ptest/: p2ptest.cu
Chapter11/matmulT/: matmulT.cu
Chapter11/matmulTS/: matmulTS.cu
Chapter11/reduceT/: reduceT.cu
include/: cx.h  cxtextures.h
